--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
 
 .input {
     cursor: default;
-    width: 25vw;
+    width: 20vw;
     border-style: solid;
     border-width: 2px;
     border-color: #A9A9A9;
@@ -106,7 +106,7 @@ body {
 }
 
 .entradas {
-    width: 75%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -134,11 +134,11 @@ body {
 }
 
 .mensagens {
-    width: 40%;
-    height: 20vw;
+    width: 60%;
+    height: 21.5vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: #FFF;
     border-style: solid;
     border-width: 2px;
