--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,9 @@ main {
     align-items: center;
     position: relative;
     width: 100%;
-    height: 100vh;
-    margin-top: 6vh;
+    height: 90vh;
+    margin-top: 10vh;
+    overflow-y: hidden;
 }
 
 .titulo {
