--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
     font-family: 'Maven Pro', sans-serif;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 main {
@@ -46,7 +46,6 @@ main {
     width: 100%;
     height: 90vh;
     margin-top: 10vh;
-    overflow-y: hidden;
 }
 
 .titulo {
@@ -175,10 +174,27 @@ main {
     padding: 1rem;
     margin: 0;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .mensagens div {
     justify-content: center;
     text-align: flex-start;
     margin: 1vh;
+}
+
+@media (max-width: 940px) and (min-width: 500px) {
+    .content {
+        width: 80%;
+    }
+    
+    .mensagens div {
+        align-items: center;
+    }
+
+    .mensagens {
+        width: 150vw;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
 }
